# vital-DSP

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  APPLY_FILTER_DEBUG_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  DEPLOYMENT.md  DOCUMENTATION_BUILD.md  Dockerfile  Dockerfile.debug  Dockerfile.gunicorn  Dockerfile.production  Dockerfile.simple  Dockerfile.test  FILTERING_ISSUES_ANALYSIS.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_0.2.1.md  RENDER_DEPLOYMENT.md  SECURITY.md  constraints.txt  deploy.sh  docker-compose.dev.yml  docker-compose.yml  gunicorn.conf.py  health-check.sh  new_test_settings.json  nginx.conf  pyproject.toml  pytest-ci.ini  pytest-full.ini  pytest.ini  readthedocs.yml  (+17 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
advanced_computation/: bayesian_analysis.py  neural_network_filtering.py  non_linear_analysis.py  pitch_shift.py  real_time_anomaly_detection.py  sparse_signal_processing.py
archive_docs/page_fixes/: RESPIRATORY_PREPROCESSING_REMOVAL_SUMMARY.md  RESPIRATORY_SIGNAL_EXTRACTION_FIX.md  TRANSFORM_PAGE_REFACTORING_COMPLETE.md  TRANSFORM_PAGE_REFACTORING_SUMMARY.md
dev_docs/: COMPLETE_ANALYSIS_SUMMARY.md  DOCUMENTATION_INDEX.md  FEATURE_ENGINEERING_ACCURACY_REPORT.md  FREQUENCY_FILTERING_IMPLEMENTATION.md  HEALTH_ANALYSIS_CLINICAL_ENHANCEMENTS_SUMMARY.md  LARGE_DATA_PROCESSING_ARCHITECTURE.md  OUCRU_CSV_EFFICIENCY_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIXES.md  PERFORMANCE_FIXES_APPLIED.md  PIPELINE_COMPREHENSIVE_REVIEW_REPORT_UPDATED.md  PIPELINE_FIX_v4_REAL_DATA.md  README.md  VITALDSP_EDGE_CASE_ANALYSIS_REPORT.md  VITALDSP_FUNCTION_ACCURACY_ANALYSIS_REPORT.md  VITALDSP_PERFORMANCE_ANALYSIS_REPORT.md  VITALDSP_WEBAPP_GAP_ANALYSIS_REPORT.md  WEBAPP_CALLBACK_LOOPS_REAL_FIXES.md  WEBAPP_PERFORMANCE_ROOT_ISSUES.md  WEBAPP_RR_INTEGRATION_FIXES.md  WEBAPP_SERVICE_MANAGER_FIX.md  WEBAPP_SLOWNESS_ROOT_CAUSE_ANALYSIS.md  WEBAPP_TESTING_GUIDE.md  test_sqi_integration.py
dev_docs/analysis_reports/: SIGNAL_PROCESSING_ANALYSIS_REPORT.md  VITALDSP_COMPREHENSIVE_ACCURACY_ANALYSIS_REPORT.md  VITALDSP_COMPREHENSIVE_ANALYSIS_REPORT.md  VITALDSP_EFFECTIVENESS_AND_ACCURACY.md
dev_docs/architecture/: ADVANCED_FEATURES_GUIDE.md  LARGE_DATA_PROCESSING_ARCHITECTURE.md  LARGE_DATA_PROCESSING_PIPELINE_DESIGN.md
dev_docs/complexity_optimization/: VITALDSP_COMPUTATIONAL_COMPLEXITY_ANALYSIS_REPORT.md  VITALDSP_COMPUTATIONAL_COMPLEXITY_OPTIMIZATION_IMPLEMENTATION_REPORT.md
dev_docs/current/: README.md
dev_docs/current_status/: CURRENT_IMPLEMENTATION_STATUS.md  FINAL_FIXES_SUMMARY.md
dev_docs/developer_guides/: PERFORMANCE_TUNING_GUIDE.md  PHASE1_3_API_REFERENCE.md
dev_docs/fix_reports/: TEST_FIXES_SUMMARY.md  VITALDSP_CRITICAL_FIXES_REPORT.md  VITALDSP_FUNCTION_ACCURACY_ANALYSIS_REPORT.md  VITALDSP_IMPLEMENTATION_CORRECTNESS_REPORT.md  VITALDSP_MEDIUM_PRIORITY_FIXES_REPORT.md
dev_docs/implementation/: DATA_LOADER_IMPLEMENTATION_SUMMARY.md  DATA_LOADER_README.md  EXPORT_FUNCTIONALITY_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PHASE_1-3_COMPLETION_REPORT.md  PHASE_1_CORE_INFRASTRUCTURE_IMPLEMENTATION_REPORT.md  PHASE_1_OPTIMIZATION_SUMMARY.md  PHASE_2_OPTIMIZATION_ANALYSIS.md  PHASE_2_PIPELINE_INTEGRATION_IMPLEMENTATION_REPORT.md  PHASE_3A_IMPLEMENTATION_TRACKING.md  PHASE_3B_HEAVY_DATA_PROCESSING_INTEGRATION_REPORT.md  PHASE_3B_IMPLEMENTATION_REPORT.md  PHASE_3_WEBAPP_PERFORMANCE_OPTIMIZATION_PLAN.md  SESSION_SUMMARY_20251012.md  UTILS_RESTRUCTURING_COMPLETE_REPORT.md  UTILS_RESTRUCTURING_PLAN.md  WEBAPP_INTEGRATION_GUIDE.md  section9_fixes_applied.md
dev_docs/ml_dl/: ML_DL_COMPREHENSIVE_IMPLEMENTATION_GUIDE.md  ML_DL_IMPLEMENTATION_STATUS.md
dev_docs/oucru_csv/: OUCRU_CSV_ENHANCEMENT_SIGNAL_TYPE_HINTS.md  OUCRU_CSV_FINAL_SUMMARY.md  OUCRU_CSV_IMPLEMENTATION.md
dev_docs/performance_optimization/: PERFORMANCE_FIXES_COMPLETE.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  WEBAPP_PERFORMANCE_ROOT_ISSUES.md
dev_docs/planning/: VITALDSP_ENHANCEMENT_PLAN_2025.md  VITALDSP_ENHANCEMENT_VERIFICATION_REPORT.md
dev_docs/user_guides/: LARGE_FILE_PROCESSING_GUIDE.md  USER_GUIDE_COMPLETE.md  WEBAPP_RUN_MODES.md
dev_docs/webapp_pages/: LAYOUT_ORGANIZATION_ANALYSIS.md  SIGNAL_FILTERING_PAGE_ANALYSIS.md  test_filtering_migration.py
dev_tools/: fix_notebook_api.py
dev_tools/profiling/: memory_leak_detector.py  performance_profiler.py
docs/: Documentation.md  PIPELINE_PAGE_DOCUMENTATION.md  PIPELINE_PAGE_USER_GUIDE.md  PIPELINE_QUICK_REFERENCE.md  requirements.txt
docs/source/: advanced_computation.rst  api_reference.rst  (+25 more)
examples/: oucru_csv_example.py  oucru_csv_signal_type_hints_example.py
filtering/: artifact_removal.py  signal_filtering.py  signal_quality_index.py
legacy/: health_report.py  monitor_tests.py  quality_callbacks_vitaldsp.py  sample_tests.ipynb
notes/: DEPLOYMENT.md  TEST_OPTIMIZATION.md  VITALDSP_WEBAPP_STRUCTURE.md
requirements/: base.txt  dev.txt  explainability.txt  pytorch.txt  tensorflow.txt
sample_data/: ECG_short.csv  PPG_short.csv
scripts/: fix_wearables_env.md
source/: conf.py  filtering.rst  index.rst  transforms.rst
src/: Dockerfile  requirements.txt  start.py  start.sh
tests/: conftest.py  test_advanced_signal_filtering.py  test_common.py  test_emd_missing_coverage.py  test_estimate_rr.py  test_filtering.py  test_fusion_rr.py  test_oucru_csv_loader.py  test_respiratory_preprocess.py  test_sleep_apnea.py  test_start_and_init.py  test_transform.py
time_domain/: peak_detection.py  signal_change_detection.py  signal_power_analysis.py
transforms/: dct_wavelet_fusion.py  hilbert_transform.py  mfcc.py  stft.py  time_freq_representation.py  wavelet_fft_fusion.py  wavelet_transform.py
utils/: attention_weights.py  common.py  convolutional_kernels.py  loss_functions.py  mother_wavelets.py
visualization/: artefact_removal_visualization.py  time_domain_visualization.py  transform_visualization.py
(+861 files in other folders)
