[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitaldsp"
version = "0.2.4"
description = "A comprehensive toolkit for Digital Signal Processing in healthcare applications."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "van-koha", email = "vital.data@oucru.org" }
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "plotly>=4.14.3",
    "scikit-learn>=0.24.0",
    "statsmodels>=0.12.0",
    "seaborn>=0.11.0",
    "PyYAML>=5.4",
    "Jinja2>=3.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
webapp = [
    "dash>=2.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
]
tensorflow = [
    "tensorflow>=2.8.0,<2.17.0; platform_system != 'Darwin' and python_version < '3.13'",
    "tensorflow-macos>=2.8.0,<2.17.0; platform_system == 'Darwin' and platform_machine == 'arm64' and python_version < '3.13'",
    "tensorflow>=2.8.0,<2.17.0; platform_system == 'Darwin' and platform_machine != 'arm64' and python_version < '3.13'",
]
pytorch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
explainability = [
    "shap>=0.41.0",
    "lime>=0.2.0",
]
dl = [
    "tensorflow>=2.8.0,<2.17.0; platform_system != 'Darwin' and python_version < '3.13'",
    "tensorflow-macos>=2.8.0,<2.17.0; platform_system == 'Darwin' and platform_machine == 'arm64' and python_version < '3.13'",
    "tensorflow>=2.8.0,<2.17.0; platform_system == 'Darwin' and platform_machine != 'arm64' and python_version < '3.13'",
]
dl-pytorch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
dl-all = [
    "tensorflow>=2.8.0,<2.17.0; platform_system != 'Darwin' and python_version < '3.13'",
    "tensorflow-macos>=2.8.0,<2.17.0; platform_system == 'Darwin' and platform_machine == 'arm64' and python_version < '3.13'",
    "tensorflow>=2.8.0,<2.17.0; platform_system == 'Darwin' and platform_machine != 'arm64' and python_version < '3.13'",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
all = [
    "tensorflow>=2.8.0,<2.17.0; platform_system != 'Darwin' and python_version < '3.13'",
    "tensorflow-macos>=2.8.0,<2.17.0; platform_system == 'Darwin' and platform_machine == 'arm64' and python_version < '3.13'",
    "tensorflow>=2.8.0,<2.17.0; platform_system == 'Darwin' and platform_machine != 'arm64' and python_version < '3.13'",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "shap>=0.41.0",
    "lime>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/Oucru-Innovations/vital-DSP"
Repository = "https://github.com/Oucru-Innovations/vital-DSP"

[project.scripts]
vitalDSP-webapp = "vitalDSP.webapp.run_webapp:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vitalDSP*", "vitalDSP_webapp*"]

[tool.setuptools.package-data]
"vitalDSP.health_analysis" = ["feature_config.yml"]
"vitalDSP.notebooks" = ["*.csv"]
"*" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--tb=short",
    "-v",
    "--maxfail=5",
    "--durations=10",
    "--ignore=dev_docs",
    "--ignore=archive_docs",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (medium speed, some dependencies)",
    "slow: Slow tests (comprehensive, heavy computation)",
    "webapp: Web application tests (UI, mocking)",
    "core: Core library tests",
    "ci: Tests that should run in CI/CD",
    "local: Tests that should only run locally",
    "fast: Fast tests that can run in parallel",
    "serial: Tests that must run serially",
    "visualization: Visualization tests (may require display mocking)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [
    ".git", ".tox", "dist", "build", "*.egg",
    "__pycache__", ".pytest_cache", "cov_html",
    "docs", "dev_docs", "archive_docs",
]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore::pandas.errors.PerformanceWarning",
]

[tool.flake8]
max-line-length = 88
exclude = [
    ".git", "__pycache__", "build", "dist",
    ".venv", "venv", "env", "*.egg-info",
    ".tox", ".mypy_cache", ".pytest_cache", "cov_html",
]
ignore = [
    "E203", "E226", "E266", "E302", "E402",
    "E501", "E731", "E741",
    "W503",
    "F401", "F541", "F811", "F841", "F403", "F405",
]
