[metadata]
name = vitalDSP
version = 0.1.1rc10
author = van-koha
author_email = vital.data@oucru.org
description = A comprehensive toolkit for Digital Signal Processing in healthcare applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Oucru-Innovations/vital-DSP
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    numpy>=1.19.2
    scipy>=1.5.2
    plotly>=4.14.3
    scikit-learn>=0.23.2

[options.packages.find]
where = src
