[metadata]
name = vitalDSP
version = 0.2.3
author = van-koha
author_email = vital.data@oucru.org
description = A comprehensive toolkit for Digital Signal Processing in healthcare applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Oucru-Innovations/vital-DSP
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    matplotlib>=3.4.0
    pandas>=1.3.0
    plotly>=4.14.3
    scikit-learn>=0.24.0
    statsmodels>=0.12.0
    seaborn>=0.11.0
    PyYAML>=5.4
    Jinja2>=3.0
    psutil>=5.8.0

[options.packages.find]
where = src

[options.package_data]
* = *.html, *.css, *.js

[options.entry_points]
console_scripts =
    vitalDSP-webapp = vitalDSP.webapp.run_webapp:main